# tropos-pyrnet

./: .gitattributes  .gitignore  .readthedocs.yaml  .zenodo.json  README.md  pyproject.toml  setup.cfg  setup.py
docs/source/: campaigns.md  conf.py  howto.md  index.rst  pyrnet.md
docs/source/calibration/: calibration_hope-melpitz.md  calibration_ioprao.md  calibration_ioprao_cc.md  calibration_melcol.md  calibration_melcol_cc.md  calibration_metpvnet.md  calibration_s2vsr.ipynb  calibration_s2vsr.md  cos_corr_s2vsr.ipynb  mean_cosine_correction.md  pyrnet_s2vsr_szen_bins_ARM.nc  pyrnet_s2vsr_szen_bins_pyranometer_avg.nc
docs/source/code_docs/: autodocs.rst  cli.md
docs/source/nbs/: data.ipynb  logger.ipynb  pyrnet.ipynb  qcrad.ipynb  reports.ipynb  utils.ipynb
example_data/: legacy_logbook.xls  read_logger_output.nc  results-survey224783.csv  to_l1a_output.nc  to_l1b_output.nc
lib/: logger.py  pyrnet.py  reports.py  utils.py
nbs/: 00_pyrnet_data.ipynb  lib_pyrnet.ipynb  lib_utils.ipynb
nbs/calibration/: calibration_s2vsr.ipynb  pyrnet_calib_2023-06_s2vsr.json
nbs/processing/: lib_logger.ipynb  lib_reports.ipynb
nbs/pyrnet/: data.ipynb  logger.ipynb  pyrnet.ipynb  qcrad.ipynb  reports.ipynb  utils.ipynb
share/: pyrnet_cfmeta_l1b.json
src/pyrnet/: __init__.py  _version.py  click.py  data.py  logger.py  pyrnet.py  qcrad.py  reports.py  utils.py
src/pyrnet/share/: pyrnet_calibration.json  pyrnet_cfmeta.c01.json  pyrnet_cfmeta.json  pyrnet_cfmeta_l1b.json  pyrnet_config.json  pyrnet_gti_angles.json  pyrnet_sensor_config.json  pyrnet_sites.json  (+1 more)
